# trusted-server

./: .env.dev  .env.example  .gitignore  .tool-versions  AGENTS.md  AUCTION_ORCHESTRATION_FLOW.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  EDGEZERO_MIGRATION.md  FAQ_POC.md  INTEGRATION_TESTS_PLAN.md  OPTIMIZATION.md  PUBLISHER_IDS_AUDIT.md  Project Governance  README.md  SEQUENCE.md  TESTING.md  clippy.toml  creative-opportunities.toml  edgezero.toml  fastly.toml  localhost+2-key.pem  localhost+2.pem  openrtb.md  permissions.yaml  permutive-callstack.md  potsi.toml  rust-toolchain.toml  test-prebid-integration.html  trusted-server.example.toml  trusted-server.toml
crates/cli/: Cargo.toml  README.md
crates/cli/src/: config.rs  error.rs  hash.rs  local.rs  main.rs  platform.rs
crates/common/: Cargo.toml  README.md  build.rs
crates/common/benches/: consent_decode.rs
crates/common/src/: ad.rs  advertiser.rs  auction_config_types.rs  auth.rs  backend.rs  backend_router.rs  config_store.rs  consent_config.rs  constants.rs  cookies.rs  creative.rs  didomi.rs  error.rs  fastly_storage.rs  gam.rs  gdpr.rs  generic_proxy.rs  geo.rs  htm_processor.test.html  html_processor.rs  html_processor.rs.orig  html_processor.test.html  http_util.rs  http_wrapper.rs  ip.rs  jose.rs  lib.rs  logging.rs  models.rs  openrtb.rs  partners.rs  permutive_proxy.rs  permutive_sdk.rs  prebid.rs  prebid_injector.rs  prebid_proxy.rs  privacy.rs  proxy.rs  publisher.rs  redacted.rs  (+17 more)
crates/common/src/auction/: README.md  config.rs  context.rs  creative_storage.rs  endpoints.rs  formats.rs  mod.rs  orchestrator.rs  orchestrator.rs.bak  provider.rs  types.rs
crates/common/src/consent/: gpp.rs  jurisdiction.rs  kv.rs  mod.rs  tcf.rs  types.rs  us_privacy.rs
crates/common/src/integrations/: adserver_mock.rs  aps.rs  aps_readme.md  datadome.rs  didomi.rs  (+12 more)
crates/common/tests/: nextjs_integration.rs
crates/device/fastly/: Cargo.toml
crates/fastly/: Cargo.toml  backends.toml
crates/fastly/src/: error.rs  http_wrapper.rs  main.rs  main.rs.orig
crates/geo/fastly/: Cargo.toml
crates/integration-tests/: Cargo.toml  README.md
crates/integration-tests/browser/: global-setup.ts  global-teardown.ts  package-lock.json  package.json  playwright.config.ts
crates/integration-tests/tests/: integration.rs  parity.rs  routing.rs
crates/js/: .gitignore  Cargo.toml  README.md  build.rs
crates/js/lib/: README.md  build-all.mjs  eslint.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts  vite.ext.config.ts  vitest.config.ts
crates/js/src/: bundle.rs  lib.rs  macros.rs
crates/js/ts/: eslint.config.js  package.json  vite.config.ts  vite.core.config.ts  vite.ext.config.ts  vitest.config.ts
crates/openrtb/: Cargo.toml  README.md  build.rs  generate.sh
crates/openrtb/proto/: openrtb.proto
crates/openrtb/src/: codegen.rs  generated.rs  lib.rs
crates/trusted-server-adapter-axum/: Cargo.toml  axum.toml
crates/trusted-server-adapter-axum/.cargo/: config.toml
crates/trusted-server-adapter-axum/src/: app.rs  lib.rs  main.rs  middleware.rs  platform.rs  registries.rs
crates/trusted-server-adapter-axum/tests/: routes.rs
crates/trusted-server-adapter-cloudflare/: .gitignore  Cargo.toml  build.sh  cloudflare.toml  wrangler.ci.toml  wrangler.toml
crates/trusted-server-adapter-cloudflare/src/: app.rs  lib.rs  middleware.rs  platform.rs
crates/trusted-server-adapter-cloudflare/tests/: routes.rs
crates/trusted-server-adapter-fastly/: Cargo.toml  build.rs  test-backends.toml
crates/trusted-server-adapter-fastly/src/: app.rs  auction_sink.rs  backend.rs  bid_cache.rs  compat.rs  ec_kv.rs  error.rs  logging.rs  main.rs  management_api.rs  middleware.rs  platform.rs  rate_limiter.rs  registries.rs  route_tests.rs  tinybird.rs
crates/trusted-server-adapter-spin/: .gitignore  Cargo.toml  edgezero.toml  runtime-config.toml  spin.toml
crates/trusted-server-adapter-spin/src/: app.rs  lib.rs  middleware.rs  platform.rs
crates/trusted-server-adapter-spin/tests/: routes.rs
crates/trusted-server-cli/: Cargo.toml
crates/trusted-server-cli/src/: app_config.rs  args.rs  audit.rs  config.rs  config_ad_templates.rs  config_command.rs  config_init.rs  dev.rs  edgezero_delegate.rs  error.rs  lib.rs  main.rs  output.rs  prebid_bundle.rs  run.rs
crates/trusted-server-cli/tests/: config_env_overlay.rs  lint_domains_cli.rs  proxy_e2e.rs  proxy_perf.rs  spike_gix_changed_vs.rs  spike_gix_config_write.rs  spike_gix_staged_diff.rs
crates/trusted-server-core/: Cargo.toml  README.md  build.rs
crates/trusted-server-core/benches/: consent_decode.rs  html_processor_bench.rs
crates/trusted-server-core/src/: asset_image_optimizer.rs  auction_config_types.rs  auth.rs  backend.rs  backend_router.rs  bid_cache.rs  cache_policy.rs  compat.rs  config.rs  config_payload.rs  consent_config.rs  constants.rs  cookies.rs  creative.rs  creative_opportunities.rs  creative_slot_build_check.rs  edge_cookie.rs  error.rs  evidence.rs  fastly_storage.rs  geo.rs  host_header.rs  host_rewrite.rs  html_processor.rs  html_processor.test.html  http_util.rs  kitchen_sink.rs  lib.rs  migration_guards.rs  models.rs  openrtb.rs  permissions.rs  price_bucket.rs  proxy.rs  publisher.rs  publisher_late_binding.rs  redacted.rs  response_privacy.rs  rsc_flight.rs  runtime_config.rs  (+12 more)
crates/trusted-server-integration-tests/: .dockerignore  Cargo.toml  README.md
crates/trusted-server-integration-tests/browser/: global-setup.ts  package.json  playwright.config.ts
crates/trusted-server-integration-tests/tests/: integration.rs  parity.rs
crates/trusted-server-js/: Cargo.toml  build.rs
crates/trusted-server-js/lib/: .gitignore  build-all.mjs  build-prebid-external.mjs  package-lock.json  package.json  vitest.config.ts
crates/trusted-server-js/src/: bundle.rs  lib.rs
crates/trusted-server-openrtb/: Cargo.toml  README.md  generate.sh
crates/trusted-server-openrtb-codegen/: Cargo.toml
crates/trusted-server-openrtb-codegen/src/: main.rs
crates/trusted-server-openrtb/src/: codegen.rs  generated.rs  lib.rs
(+787 files in other folders)
