[package]
name = "cli"
version = "0.1.0"
authors = ["IAB Technology Laboratory"]
edition = "2021"
description = "CLI tool for Trusted Server configuration management and attestation"
publish = false
license = "Apache-2.0"

[[bin]]
name = "tscli"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive", "env"] }
config = { workspace = true }
error-stack = { workspace = true }
hex = { workspace = true }
ureq = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
urlencoding = { workspace = true }
validator = { workspace = true }
chrono = { workspace = true }

# For loading Settings struct and validation
trusted-server-common = { path = "../common", default-features = false }

[dev-dependencies]
tempfile = { workspace = true }
