[package]
name = "trusted-server-common"
version = "0.1.0"
authors = []
edition = "2021"
# Remove this line if you want to be able to publish this crate as open source on crates.io.
# Otherwise, `publish = false` prevents an accidental `cargo publish` from revealing private source.
publish = false
license = "Apache-2.0"

[dependencies]
base64 = "0.22"
brotli = "8.0"
chrono = "0.4"
config = "0.15.11"
cookie = "0.18.1"
derive_more = { version = "2.0", features = ["display", "error"] }
error-stack = "0.5"
fastly = "0.11.5"
flate2 = "1.0"
futures = "0.3"
handlebars = "6.3.2"
hex = "0.4.3"
hmac = "0.12.1"
http = "1.3.1"
log = "0.4.27"
log-fastly = "0.11.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
sha2 = "0.10.9"
tokio = { version = "1.46", features = ["sync", "macros", "io-util", "rt", "time"] }
bytes = "1.5"
url = "2.4.1"
uuid = { version = "1.0", features = ["v4"] }
urlencoding = "2.1"
lol_html = "2.6.0"
pin-project-lite = "0.2"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
config = "0.15.11"
derive_more = { version = "1.0", features = ["display", "error"] }
error-stack = "0.5"
http = "1.3.1"
toml = "0.9.0"
url = "2.4.1"

[features]
default = []

[dev-dependencies]
regex = "1.1.1"
temp-env = "0.3.6"
tokio-test = "0.4"
