[package]
name = "trusted-server-common"
version = "0.1.0"
authors = []
edition = "2021"
# Remove this line if you want to be able to publish this crate as open source on crates.io.
# Otherwise, `publish = false` prevents an accidental `cargo publish` from revealing private source.
publish = false
license = "Apache-2.0"

[dependencies]
base64 = { workspace = true }
brotli = { workspace = true }
bytes = { workspace = true }
chacha20poly1305 = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
config = { workspace = true }
cookie = { workspace = true }
derive_more = { workspace = true }
error-stack = { workspace = true }
fastly = { workspace = true }
flate2 = { workspace = true }
futures = { workspace = true }
handlebars = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
http = { workspace = true }
jose-jwk = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
log-fastly = { workspace = true }
lol_html = { workspace = true }
pin-project-lite = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
trusted-server-js = { path = "../js" }
url = { workspace = true }
urlencoding = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }
ed25519-dalek = { workspace = true }

[build-dependencies]
config = { workspace = true }
derive_more = { workspace = true }
error-stack = { workspace = true }
http = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
url = { workspace = true }
validator = { workspace = true }

[features]
default = []

[dev-dependencies]
temp-env = { workspace = true }
tokio-test = { workspace = true }
