[package]
name = "trusted-server-fastly"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { workspace = true }
error-stack = { workspace = true }
fastly = { workspace = true }
fern = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
log-fastly = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
trusted-server-common = { path = "../common" }
trusted-server-js = { path = "../js" }
