[package]
name = "integration-tests"
version = "0.1.0"
edition = "2024"
publish = false

[[test]]
name = "integration"
path = "tests/integration.rs"
harness = true

[dev-dependencies]
testcontainers = { version = "0.25", features = ["blocking"] }
reqwest = { version = "0.12", features = ["blocking"] }
scraper = "0.21"
log = "0.4"
serde_json = "1"
error-stack = "0.6"
derive_more = { version = "2.0", features = ["display"] }
env_logger = "0.11"
