[package]
name = "integration-tests"
version = "0.1.0"
edition = "2024"
publish = false

[[test]]
name = "integration"
path = "tests/integration.rs"
harness = true

[[test]]
name = "parity"
path = "tests/parity.rs"
harness = true

[dev-dependencies]
testcontainers = { version = "0.25", features = ["blocking"] }
reqwest = { version = "0.12", features = ["blocking"] }
scraper = "0.21"
log = "0.4.29"
serde_json = "1.0.149"
error-stack = "0.6"
derive_more = { version = "2.0", features = ["display"] }
env_logger = "0.11"
libc = "0.2"
trusted-server-adapter-axum = { path = "../trusted-server-adapter-axum" }
trusted-server-adapter-cloudflare = { path = "../trusted-server-adapter-cloudflare" }
edgezero-adapter-axum = { git = "https://github.com/stackpop/edgezero", rev = "38198f9839b70aef03ab971ae5876982773fc2a1", features = ["axum"] }
edgezero-core = { git = "https://github.com/stackpop/edgezero", rev = "38198f9839b70aef03ab971ae5876982773fc2a1" }
axum = "0.8"
tower = "0.5"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
http = "1"
http-body-util = "0.1"
bytes = "1"
base64 = "0.22"
