[package]
name = "trusted-server-openrtb"
version = "0.1.0"
authors = []
edition = "2021"
publish = false
license = "Apache-2.0"

[lints]
workspace = true

[dependencies]
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
