[package]
name = "trusted-server-adapter-axum"
version = "0.1.0"
edition = "2024"
publish = false

[lints]
workspace = true

[lib]
name = "trusted_server_adapter_axum"
path = "src/lib.rs"

[[bin]]
name = "trusted-server-axum"
path = "src/main.rs"

[dependencies]
async-trait = { workspace = true }
edgezero-adapter-axum = { workspace = true, features = ["axum"] }
edgezero-core = { workspace = true }
error-stack = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }
trusted-server-core = { path = "../trusted-server-core" }

[dev-dependencies]
axum = "0.8"
temp-env = { workspace = true }
edgezero-adapter-axum = { workspace = true, features = ["axum"] }
edgezero-core = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tower = { version = "0.4", features = ["util"] }
