[package]
name = "trusted-server-adapter-axum"
version = "0.1.0"
edition = "2024"
publish = false

[lints]
workspace = true

[lib]
name = "trusted_server_adapter_axum"
path = "src/lib.rs"

[[bin]]
name = "trusted-server-axum"
path = "src/main.rs"

[dependencies]
async-trait = { workspace = true }
edgezero-adapter-axum = { workspace = true, features = ["axum"] }
edgezero-core = { workspace = true }
error-stack = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
simple_logger = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }
trusted-server-core = { path = "../trusted-server-core" }

[dev-dependencies]
axum = { workspace = true }
base64 = { workspace = true }
temp-env = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tower = { workspace = true, features = ["util"] }
