[package]
name = "trusted-server-adapter-fastly"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
edgezero-adapter-fastly = { workspace = true, features = ["fastly"] }
edgezero-core = { workspace = true }
error-stack = { workspace = true }
fastly = { workspace = true }
fern = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
log-fastly = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
trusted-server-core = { workspace = true }
urlencoding = { workspace = true }

[dev-dependencies]
edgezero-core = { workspace = true, features = ["test-utils"] }
