[package]
name = "trusted-server-adapter-fastly"
description = "Fastly Compute entry point for Trusted Server."
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
edgezero-adapter-fastly = { workspace = true, features = ["fastly"] }
edgezero-core = { workspace = true }
error-stack = { workspace = true }
fastly = { workspace = true }
fern = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
log-fastly = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
trusted-server-core = { workspace = true }
trusted-server-device-fastly = { workspace = true }
trusted-server-geo-fastly = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }

[dev-dependencies]
bytes = { workspace = true }
edgezero-core = { workspace = true, features = ["test-utils"] }
trusted-server-core = { workspace = true, features = ["test-utils"] }
