[package]
name = "trusted-server-adapter-spin"
description = "Fermyon Spin entry point for Trusted Server."
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

[lib]
name = "trusted_server_adapter_spin"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = []
spin = ["edgezero-adapter-spin/spin"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
brotli = { workspace = true }
bytes = { workspace = true }
edgezero-adapter-spin = { workspace = true }
edgezero-core = { workspace = true }
error-stack = { workspace = true }
flate2 = { workspace = true }
futures = { workspace = true }
http-body-util = { workspace = true }
log = { workspace = true }
trusted-server-core = { workspace = true }
trusted-server-js = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
spin-sdk = { workspace = true }

[dev-dependencies]
base64 = { workspace = true }
edgezero-core = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
